apps/openstatus/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openstatus-server
  namespace: observability
  labels:
    app: openstatus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openstatus-server
  template:
    metadata:
      labels:
        app: openstatus-server
    spec:
      containers:
        - name: openstatus-server
          image: ghcr.io/realtong/openstatus-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
