apps/openstatus/private-location-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openstatus-private-location
  namespace: observability
  labels:
    app: openstatus-private-location
spec:
  selector:
    app: openstatus-private-location
  ports:
    - name: http
      port: 8080
      targetPort: 8080
