apps/openstatus/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openstatus-server
  namespace: observability
  labels:
    app: openstatus-server
spec:
  selector:
    app: openstatus-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
