apps/openstatus/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openstatus-dashboard-ingress
  namespace: observability
  annotations:
    glance/icon: di:openstatus
    glance/name: "OpenStatus"
    glance/url: https://status.realtong.cn
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - status.realtong.cn
  rules:
    - host: status.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openstatus-dashboard
                port:
                  number: 3000
